--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -393,3 +393,25 @@ textarea:focus {
   outline: transparent;
   -webkit-tap-highlight-color: transparent;
 }
+
+.underline-animated {
+  position: relative;
+  text-decoration: none;
+}
+
+.underline-animated::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: -4px;
+  background-color: currentColor;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-out;
+}
+
+.underline-animated:hover::before {
+  transform: scaleX(1);
+}
